	on package list context menus.
  BugFix: DragonFlyBSD support updated!
  BugFix: Let exit menu and close button enabled for cancelling running actions.
  Faster startup time thanks to deferred retrieval of outdated packages.
  Added option to create backup boot environments before upgrades when root is on ZFS.
  Added support to HardenedBSD.
  Added Lumina desktop support.
  Added Info option on package list context menu.
  Added lock/unlock actions on installed packages.
  Changed some ui icons.
  Added plasma5 support.
  Added a custom doas tool to execute actions: octopkg-doas, a lxqt-sudo clone.
  Abort show file content when file list is greater than 1MB of text.
  Changed F12 key behaviour to F11.
  Added the option to terminate the current transaction being executed, by pressing 
	"Ctrl+Z".
  Added "pkg clean" support (Ctrl+Shift+C and menu item).
  Now the size of TransactionDialog is saved between calls.
  Now tab Files shows progress bar while building pkg list.

0.2.0
  BugFix: anchor navigation fixes.
  BugFix: the name of some dependencies were not being shown correctly.
  BugFix: list of dependencies was not sorted.
  BugFix: outdated pkg list was not sorted.
  BugFix: When user closed searchbar inside a QTextBrowser, cursor position was reseted.
  BugFix: Do not refresh pkg lists while clicking remote/local buttons.
  BugFix: Fix gksu "-- f parameter" execution error.
  BugFix: When trying to install a Ports pkg not available in database, shows error 
	(thanks to asxbsd).
  BugFix: List of outdated packages not being retrieved in some cases.
  Let user removes any automatic installed package.
  Remove commands now use -R option.
  Added DragonFlyBSD support.
  Added GhostBSD support (thanks to ringo32 and rkramerbsd). 
  Added search feature also in Information tab.
  Heavily threaded version, minimizing interface freezing.

0.1.0 
  Initial Proof of Concept release.